# sfcAtomizer

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSING.md  RELEASE_NOTES_v0.2-rc.md  RELEASE_NOTES_v0.3-rc.md  RELEASE_NOTES_v0.4-rc.md  RELEASE_NOTES_v0.5-rc.md  SPEC.md  STATUS.md
.cargo/: config.toml
app/: Cargo.toml
app/src/: app_main.rs  main.rs  v2_editor.rs
app/tests/: cli.rs
audition/m2.0-postlude/: README.md
baselines/: m2.json  m2_canonical_fixtures.md  m3.json  m4.json  m5.json
core/: Cargo.toml
core/fixtures/asm/: README.md  m0_smoke.asm  m1_loader_65816.asm  m1_sample_basic.asm  m2_multi_voice_atom.asm
core/fixtures/brr/: README.md  _reference.py  filter0_basic.json  filter0_shift_clamp.json  filter1_nonzero_history.json  filter1_zero_history.json  filter2_nonzero_history.json  filter3_nonzero_history.json  flags_end_loop_ignored_by_raw_decode.json  loop_boundary_history.json  multi_block_predictor_history.json
core/src/: aram.rs  asm.rs  atom.rs  audio.rs  audition.rs  brr.rs  brr_encoder.rs  brr_fixtures.rs  bytecode.rs  capability_manifest.rs  characterize_gaussian.rs  driver_build.rs  driver_proto.rs  echo_validation.rs  import.rs  lib.rs  loop_finder.rs  manifest.rs  module_image.rs  module_writer.rs  packer.rs  pitch.rs  project.rs  project_v2.rs  report.rs  sequence_compiler.rs  sfc_export.rs  spc.rs  tools.rs  voice_setup.rs
core/tests/: atom_edge_cases.rs  atom_render.rs  audio.rs  brr_fixtures.rs  brr_noise_floor_metric.rs  characterization_pitch_register.rs  decode_to_pcm.rs  driver_build.rs  import.rs  loop_click_metric.rs  m4_4_spike_measurement.rs  m5_4_alt_shift_objective_spike.rs  m5_4_wider_beam_high_noise_cluster.rs  pack_v2.rs  sequence_compile.rs
core/tests/common/: mod.rs
docs/: reproduce-m2.md
docs/history/: M0-M2-passes.md
fixtures/projects/atom_edge_cases/: README.md  harmonic_16_cycle_64.sfcproj.json
fixtures/projects/canonical_m2/: README.md  canonical_m2.sfcproj.json
tools/snes_spc_oracle/: CMakeLists.txt  README.md  main.cpp
