[workspace]
resolver = "2"
members = ["core", "app"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/levimandrell/sfcAtomizer"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
sha2 = "0.10"
tempfile = "3"
