[package]
name = "sfc-atomizer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host application (GUI/CLI) for the SFC Wave Compiler."

[[bin]]
name = "sfcwc"
path = "src/main.rs"

[[bin]]
name = "sfcwc-app"
path = "src/app_main.rs"

[dependencies]
sfc-atomizer-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
