[package]
name = "sfc-atomizer-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core compiler library for the SFC Wave Compiler: BRR encoder/decoder, atom compiler, ARAM packer."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
# symphonia is wired here so M1.2 (audio import) doesn't have to
# touch workspace deps. Not yet referenced from any module; the
# unused_crate_dependencies lint is allow-by-default so this is
# harmless at the lint level.
symphonia = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
